--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,81 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-around;
+  font-size: 200px;
+  background: red;
   color: white;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  transition: all 2s;
 }
 
-.App-link {
-  color: #61dafb;
+.header-small {
+  height: 10%;
+  font-size: 20px;
 }
 
-@keyframes App-logo-spin {
+.NameContainer {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  left: 200px;
+  top: 250px;
+  font-family: 'Bungee Shade', cursive;
+  font-size: 80px;
+  color: red;
+}
+
+.AboutContainer {
+  background-color: black;
+  position: absolute;
+  height: 100%;
+  left: 50%;
+  top: 0%;
+  overflow: auto;
+}
+
+.AboutText {
+  font-family: 'VT323', monospace;
+  color: rgba(0, 255, 0, 1);
+  font-size: 40px;
+  line-height: 1.3;
+  position: relative;
+  height: 100%;
+  padding: 0 10px 0 10px;
+  top: 0%;
+  overflow: auto;
+  animation-name: bio;
+  animation-duration: 5s;
+  animation-timing-function: ease-in;
+}
+
+.HalfNavBar {
+  font-family: 'Eczar', serif;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  position: fixed;
+  width: 50%;
+  margin-top: 10px;
+}
+
+@keyframes bio {
   from {
-    transform: rotate(0deg);
+    top: 100%;
+    color: rgba(0, 255, 0, 0);
   }
   to {
-    transform: rotate(360deg);
+    top: 0%;
+    color: rgba(0, 255, 0, 1);
   }
 }
