--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,8 @@
   display: flex;
   flex-direction: column;
   position: fixed;
-  left: 200px;
-  top: 250px;
+  left: 15%;
+  top: 35%;
   font-family: 'Bungee Shade', cursive;
   font-size: 80px;
   color: red;
