--- a/src/Nav/nav.css
+++ b/src/Nav/nav.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0 auto;
+  overflow: hidden;
+}
+
 .homepage {
   font-family: 'Bungee Shade', cursive;
   font-weight: bold;
@@ -76,8 +81,8 @@
 
 .welcome {
   position: absolute;
-  left: 200px;
-  top: 250px;
+  left: 15%;
+  top: 35%;
   background-color:rgba(255, 255, 255, 0);
   transform: perspective(1px) translateZ(0);
   transition-duration: 0.5s;
@@ -95,8 +100,8 @@
 .the {
   background-color:rgba(255, 255, 255, 0);
   position: absolute;
-  left: 275px;
-  top: 300px;
+  left: 22%;
+  top: 45%;
   transform: perspective(1px) translateZ(0);
   transition-duration: 0.5s;
   -webkit-transform: perspective(1px) translateZ(0);
@@ -113,8 +118,8 @@
 .portfolio-of {
   background-color:rgba(255, 255, 255, 0);
   position: absolute;
-  left: 250px;
-  top: 350px;
+  left: 20%;
+  top: 55%;
   transform: perspective(1px) translateZ(0);
   transition-duration: 0.5s;
   -webkit-transform: perspective(1px) translateZ(0);
@@ -130,8 +135,8 @@
 
 .home-img {
   position: absolute;
-  left: 475px;
-  top: 350px;
+  left: 50%;
+  top: 50%;
   border-radius: 25px;
   visibility: hidden;
 }
@@ -139,8 +144,8 @@
 .name {
   background-color:rgba(255, 255, 255, 0);
   position: absolute;
-  left: 1000px;
-  top: 250px;
+  left: 75%;
+  top: 35%;
   transform: perspective(1px) translateZ(0);
   transition-duration: 0.5s;
   -webkit-transform: perspective(1px) translateZ(0);
@@ -157,8 +162,8 @@
 .front-end {
   background-color:rgba(255, 255, 255, 0);
   position: absolute;
-  left: 930px;
-  top: 300px;
+  left: 72%;
+  top: 45%;
   transform: perspective(1px) translateZ(0);
   transition-duration: 0.5s;
   -webkit-transform: perspective(1px) translateZ(0);
@@ -175,8 +180,8 @@
 .web-dev {
   background-color:rgba(255, 255, 255, 0);
   position: absolute;
-  left: 875px;
-  top: 350px;
+  left: 68%;
+  top: 55%;
   transform: perspective(1px) translateZ(0);
   transition-duration: 0.5s;
   -webkit-transform: perspective(1px) translateZ(0);
