--- a/src/project.css
+++ b/src/project.css
@@ -7,8 +7,8 @@
 .menu {
   display: inline-block;
   position: absolute;
-  left: 25px;
-  top: 35px;
+  left: 2.5%;
+  top: 5%;
 }
 
 .bar1, .bar2, .bar3 {
@@ -80,6 +80,7 @@
 }
 
 .RickMortyText {
+  grid-area: C;
   font-family: 'Bungee', cursive;
   padding-top: 50px;
 }
