--- a/src/Nav/nav.css
+++ b/src/Nav/nav.css
@@ -16,14 +16,16 @@
 }
 
 .igIcon{
-  height: 100px;
+  height: 75px;
   width: 100px;
+  margin-top: 10px;
+  margin-left: 15px;
+
 }
 
 .gitIcon {
   height: 75px;
   width: 75px;
-  border-radius: 25%;
   margin-right: 25px;
   margin-top: 10px;
 }
