--- a/src/project.css
+++ b/src/project.css
@@ -192,9 +192,9 @@
 }
 
 .WhoHasTimeText h1{
-  font-family: 'Mountains of Christmas', cursive;
+  font-family: 'Indie Flower', cursive;
   font-weight: bold;
-  padding: 25px 0 25px 0;
+  padding: 20px 0 20px 0;
   margin: 5px 0 0 0;
 }
 
