--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
   display: flex;
   flex-direction: column;
   position: fixed;
-  left: 15%;
+  left: 12.5%;
   top: 35%;
   font-family: 'Bungee Shade', cursive;
   font-size: 80px;
@@ -77,5 +77,67 @@
   to {
     top: 0%;
     color: rgba(0, 255, 0, 1);
+  }
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .HalfNavBar {
+    font-size: 18px;
+  }
+
+  .NameContainer {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    left: 3.5%;
+    top: 35%;
+    font-family: 'Bungee Shade', cursive;
+    font-size: 50px;
+    color: red;
+  }
+
+  .AboutText {
+    font-size: 24px;
+    line-height: 1.3;
+  }
+
+}
+
+@media (min-width: 481px) and (max-width: 800px) {
+  .HalfNavBar {
+    font-size: 24px;
+  }
+
+  .NameContainer {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    left: 5%;
+    top: 35%;
+    font-family: 'Bungee Shade', cursive;
+    color: red;
+  }
+
+  .AboutText {
+    font-size: 31px;
+    line-height: 1.3;
+  }
+}
+
+@media (min-width: 801px) and (max-width: 950px) {
+  .NameContainer {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    left: 8%;
+    top: 35%;
+    font-size: 80px;
+    font-family: 'Bungee Shade', cursive;
+    color: red;
+  }
+
+  .AboutText {
+    font-size: 33.5px;
+    line-height: 1.3;
   }
 }
