--- a/src/projectMedia.css
+++ b/src/projectMedia.css
@@ -1,188 +1,42 @@
-/*Responsive Web*/
-
-@media only screen and (max-width: 400px) {*/
+@media (min-width: 320px) and (max-width: 480px) {
   .RickMortyOverlay {
-    grid-area: C;
-    color: white;
-    background-color: #FD6EFB;
-    text-align: center;
-    position: absolute;
     top: 17.2%;
-    left: 66.4%;
-    width: 33%;
-    height: 0%;
-    transition: .5s ease;
   }
 
   .RickMortyText h1{
-    grid-area: C;
     font-size: 14px;
-    font-family: 'Bungee', cursive;
+    padding: 3px 0 3px 0;
   }
 
   .RickMorty:hover .RickMortyOverlay {
-    grid-area: C;
-    height: 10%;
+    height: 29.3%;
   }
 
   .DuckHuntOverlay {
-    grid-area: D;
-    color: white;
-    background-color: #619FF8;
-    text-align: center;
-    position: absolute;
-    top: 99%;
-    left: 0%;
-    width: 33.6%;
-    height: 0%;
-    transition: .5s ease;
+    top: 47.9%;
   }
 
   .DuckHuntText h1{
-    font-family: 'Indie Flower', cursive;
-    font-weight: bold;
-    padding: 50px 0 25px 0;
-    margin: 5px 0 0 0;
+    font-size: 16px;
+    padding: 12px 0 13px 0;
   }
 
   .DuckHunt:hover .DuckHuntOverlay {
-    grid-area: C;
-    height: 80.3%;
+    height: 29%;
   }
 
   .RemediOverlay {
-    grid-area: G;
-    color: white;
-    background-color: #546056;
-    text-align: center;
-    position: absolute;
-    top: 180.8%;
-    left: 66.4%;
-    width: 33%;
-    height: 0%;
-    transition: .5s ease;
+    top: 78.5%;
   }
 
   .RemediText h1{
-    font-family: 'Shadows Into Light', cursive;
-    font-size: 30px;
-    font-weight: bold;
-    padding: 50px 0 25px 0;
-    margin: 5px 0 0 0;
-  }
-
-  .Remedi:hover .RemediOverlay {
-    grid-area: C;
-    height: 86.1%;
-  }
-
-  .WhoHasTime {
-    grid-area: I;
-    width: 100%;
-    height: 100%;
-  }
-
-  .WhoHasTimeOverlay {
-    grid-area: H;
-    color: white;
-    background-color: #450099;
-    text-align: center;
-    position: absolute;
-    top: 268.3%;
-    left: 0%;
-    width: 33.6%;
-    height: 0%;
-    transition: .5s ease;
-  }
-
-  .WhoHasTime:hover .WhoHasTimeOverlay {
-    grid-area: C;
-    height: 80.3%;
-  }
-
-  .WhoHasTimeText h1{
-    font-family: 'Mountains of Christmas', cursive;
-    font-weight: bold;
-    padding: 25px 0 25px 0;
-    margin: 5px 0 0 0;
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  .RickMortyOverlay {
-    grid-area: C;
-    color: white;
-    background-color: #FD6EFB;
-    text-align: center;
-    position: absolute;
-    top: 21.5%;
-    left: 66.4%;
-    width: 33%;
-    height: 0%;
-    transition: .5s ease;
-  }
-
-  .RickMortyText h1{
-    grid-area: C;
-    font-size: 14px;
-    font-family: 'Bungee', cursive;
-    padding: 8px 0 8px 0;
-  }
-
-  .RickMorty:hover .RickMortyOverlay {
-    height: 45.8%;
-  }
-
-  .DuckHuntOverlay {
-    grid-area: D;
-    color: white;
-    background-color: #619FF8;
-    text-align: center;
-    position: absolute;
-    top: 69.1%;
-    left: 0%;
-    width: 33.6%;
-    height: 0%;
-    transition: .5s ease;
-  }
-
-  .DuckHuntText h1{
-    font-family: 'Indie Flower', cursive;
-    font-weight: bold;
-    font-size: 14px;
-    padding: 25px 0 13px 0;
-    margin: 5px 0 0 0;
-  }
-
-  .DuckHunt:hover .DuckHuntOverlay {
-    grid-area: C;
-    height: 46%;
-  }
-
-  .RemediOverlay {
-    grid-area: G;
-    color: white;
-    background-color: #546056;
-    text-align: center;
-    position: absolute;
-    top: 117%;
-    left: 66.4%;
-    width: 33%;
-    height: 0%;
-    transition: .5s ease;
-  }
-
-  .RemediText h1{
-    font-family: 'Shadows Into Light', cursive;
     font-size: 20px;
-    font-weight: bold;
     padding: 30px 0 15px 0;
     margin: 5px 0 0 0;
   }
 
   .Remedi:hover .RemediOverlay {
-    grid-area: C;
-    height: 71.4%;
+    height: 57.4%;
   }
 
   .imageRemedi {
@@ -190,30 +44,135 @@
   }
 
   .WhoHasTimeOverlay {
-    grid-area: H;
-    color: white;
-    background-color: #450099;
-    text-align: center;
-    position: absolute;
-    top: 190.2%;
-    left: 0%;
-    width: 33.6%;
-    height: 0%;
-    transition: .5s ease;
+    top: 137.3%;
   }
 
   .WhoHasTimeText h1{
-    font-family: 'Mountains of Christmas', cursive;
-    font-weight: bold;
-    font-size: 18px;
+    font-size: 13px;
     padding: 5px 0 5px 0;
-    margin: 5px 0 0 0;
   }
 
   .WhoHasTime:hover .WhoHasTimeOverlay {
-    grid-area: C;
-    height: 45.8%;
+    height: 29.3%;
   }
 }
 
-/*Mobile CSS*/
+@media (min-width: 481px) and (max-width: 800px) {
+  .RickMortyOverlay {
+    top: 17.2%;
+  }
+
+  .RickMortyText h1{
+    font-size: 20px;
+    padding: 5px 0 5px 0;
+  }
+
+  .RickMorty:hover .RickMortyOverlay {
+    height: 49.7%;
+  }
+
+  .DuckHuntOverlay {
+    top: 68.3%;
+  }
+
+  .DuckHuntText h1{
+    font-size: 26px;
+    padding: 12px 0 13px 0;
+  }
+
+  .DuckHunt:hover .DuckHuntOverlay {
+    height: 49.7%;
+  }
+
+  .RemediOverlay {
+    top: 119.4%;
+  }
+
+  .RemediText h1{
+    font-size: 20px;
+    padding: 30px 0 15px 0;
+    margin: 5px 0 0 0;
+  }
+
+  .Remedi:hover .RemediOverlay {
+    height: 57.4%;
+  }
+
+  .imageRemedi {
+    height: 400px;
+  }
+
+  .WhoHasTimeOverlay {
+    top: 178.2%;
+  }
+
+  .WhoHasTimeText h1{
+    font-size: 24px;
+    padding: 5px 1px 5px 1px;
+  }
+
+  .WhoHasTime:hover .WhoHasTimeOverlay {
+    height: 49.8%;
+  }
+}
+
+@media (min-width: 801px) and (max-width: 1028px) {
+  .RickMortyOverlay {
+    top: 17.2%;
+  }
+
+  .RickMortyText h1{
+    font-size: 28px;
+    padding: 5px 0 5px 0;
+  }
+
+  .RickMorty:hover .RickMortyOverlay {
+    height: 64.3%;
+  }
+
+  .DuckHuntOverlay {
+    top: 82.9%;
+  }
+
+  .DuckHuntText h1{
+    font-size: 30px;
+    padding: 12px 0 13px 0;
+    margin-top: 35px;
+  }
+
+  .DuckHunt:hover .DuckHuntOverlay {
+    height: 64.2%;
+  }
+
+  .RemediOverlay {
+    top: 148.5%;
+  }
+
+  .RemediText h1{
+    font-size: 28px;
+    padding: 30px 0 15px 0;
+    margin: 5px 0 0 0;
+  }
+
+  .Remedi:hover .RemediOverlay {
+    height: 57.4%;
+  }
+
+  .imageRemedi {
+    height: 400px;
+  }
+
+  .WhoHasTimeOverlay {
+    top: 207.3%;
+  }
+
+  .WhoHasTimeText h1{
+    font-size: 24px;
+    padding: 10px 2px 10px 2px;
+    margin-top: 25px
+  }
+
+  .WhoHasTime:hover .WhoHasTimeOverlay {
+    height: 64.3%;
+  }
+}
